animations for handMove , ballFlow, dogTurn and tailWag

--- a/throw_fetch.html
+++ b/throw_fetch.html
@@ -27,7 +27,7 @@
         </div>
         
       </div>
-      <div class="ball"></div>
+      <div class="ball js-ball"></div>
       <div class="dog">
         <div class="dog-head">
           <div class="dog-head-inner"></div>
@@ -47,6 +47,7 @@
         <div class="dog-tail"></div>
       </div>
       
+      <script type="module" src="./scripts/throw_fetch.js"></script>
     </div>
   </body>
 </html>
