--- a/throw_fetch.html
+++ b/throw_fetch.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="background">
+      <p class="instruction">Click on the Ball</p>
       <div class="sun"></div>
       <div class="human">
         <div class="human-head">
