Added basic test methods using jasmine

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -13,16 +13,12 @@
   <!-- optional: include a file here that configures the Jasmine env -->
   <script src="lib/jasmine-5.1.1/boot1.js"></script>
 
-  <!-- include source files here... -->
-  <script src=""></script>
-  
-
-  <!-- include test files here... -->
-  <script src=""></script>
+  <script src="scripts/throwFetchTest.js"></script>
  
 
 </head>
 
 <body>
+  <div class="js-test-container"></div>
 </body>
 </html>
