--- a/throw_fetch.html
+++ b/throw_fetch.html
@@ -55,6 +55,6 @@
       </div>
     </div>
 
-    <script type="module" src="./scripts/throw_fetch.js"></script>
+    <script src="./scripts/throw_fetch.js"></script>
   </body>
 </html>
